--- a/.github/workflows/belgium-flanders.yml
+++ b/.github/workflows/belgium-flanders.yml
@@ -94,6 +94,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
+          git pull
           git add data/belgium/flanders/difference/Wegenregister_SHAPE_20200917/diff.geojson
           git add data/belgium/flanders/difference/Wegenregister_SHAPE_20200917/stats.json
           git commit -m "🗃 Update difference for Flanders, Belgium"
