--- a/.github/workflows/belgium-brussels.yml
+++ b/.github/workflows/belgium-brussels.yml
@@ -76,7 +76,7 @@ jobs:
             --maximum-zoom=14 --minimum-zoom=14 \
             --layer="buffers" \
             --output="belgium-buffers.mbtiles" \
-            "openstreetmap-buffers.geojson" "maproulette-buffers.geojson"
+            "openstreetmap-lines-buffers.geojson" "openstreetmap-polygons-buffers.geojson" "maproulette-buffers.geojson"
       - name: Difference
         run: node "script/difference.js" --output-dir="data/belgium/brussels/difference" "UrbAdm_STREET_AXISTagged.mbtiles" "belgium-buffers.mbtiles"
       - name: Upload difference
