--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "## Requirements",
   "main": "index.js",
   "scripts": {
+    "deploy-app": "cd app && npm run export",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --removeComments"
   },
