--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install and Build
         run: |
           npm install
-          npm run export
+          npm run export:githubio
         working-directory: app
 
       - name: Deploy
