--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bootstrap": "^4.5.3",
     "bulma": "^0.9.1",
+    "chart.js": "^2.9.4",
     "compression": "^1.7.1",
     "moment": "^2.29.1",
     "polka": "next",
