--- a/.github/workflows/belgium-brussels.yml
+++ b/.github/workflows/belgium-brussels.yml
@@ -90,6 +90,7 @@ jobs:
           name: Brussels-Statistics
           path: data/belgium/brussels/difference/stats.json
       - name: Push to repository
+        if: ${{ github.event != 'pull_request' }}
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
