--- a/app/package.json
+++ b/app/package.json
@@ -25,7 +25,7 @@
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/runtime": "^7.12.1",
-    "@octokit/rest": "^18.0.8",
+    "@octokit/rest": "^18.0.9",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
@@ -33,6 +33,7 @@
     "@rollup/plugin-typescript": "^6.1.0",
     "@rollup/plugin-url": "^5.0.1",
     "@tsconfig/svelte": "^1.0.10",
+    "@types/chart.js": "^2.9.27",
     "@types/compression": "^1.7.0",
     "@types/node": "^14.14.6",
     "@types/polka": "^0.5.1",
@@ -40,13 +41,13 @@
     "dotenv": "^8.2.0",
     "node-sass": "^5.0.0",
     "postcss": "^8.1.4",
-    "rollup": "^2.33.0",
+    "rollup": "^2.33.1",
     "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-svelte": "^6.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "sapper": "^0.28.10",
     "svelte": "^3.29.4",
-    "svelte-check": "^1.1.6",
+    "svelte-check": "^1.1.7",
     "svelte-preprocess": "^4.5.2",
     "tslib": "^2.0.3",
     "typescript": "^4.0.5"
