Rename GITHUB_TOKEN to TOKEN + Add TOKEN to deploy-app.yml

--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -25,6 +25,8 @@ jobs:
           npm install
           npm run export:githubio
         working-directory: app
+        env:
+          TOKEN: ${{ secrets.TOKEN }}
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@3.6.2
