--- a/.github/workflows/belgium-brussels.yml
+++ b/.github/workflows/belgium-brussels.yml
@@ -21,8 +21,8 @@ on:
 
 jobs:
 
-  diff:
-    name: Generate difference
+  diff-brussels:
+    name: Generate difference for Brussels, Belgium
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
