--- a/.github/workflows/belgium-flanders.yml
+++ b/.github/workflows/belgium-flanders.yml
@@ -21,8 +21,8 @@ on:
 
 jobs:
 
-  diff:
-    name: Generate difference
+  diff-flanders:
+    name: Generate difference for Flanders, Belgium
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
