--- a/.github/workflows/belgium-brussels.yml
+++ b/.github/workflows/belgium-brussels.yml
@@ -48,6 +48,7 @@ jobs:
             -s_srs "EPSG:31370" -t_srs "EPSG:4326" \
             -sql "@data/belgium/brussels/filter.sql" \
             -lco COORDINATE_PRECISION=6 \
+            -lco ID_FIELD=ID \
             "UrbAdm_STREET_AXIS.geojson" \
             "shp/UrbAdm_STREET_AXIS.shp"
       - name: Convert UrbIS fields to OpenStreetMap tags
