--- a/.github/workflows/belgium-flanders.yml
+++ b/.github/workflows/belgium-flanders.yml
@@ -26,6 +26,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          persist-credentials: false
+          token: ${{ secrets.TOKEN }}
       - name: Install GDAL
         run: |
           sudo apt-add-repository ppa:ubuntugis/ubuntugis-unstable
