--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -2,7 +2,11 @@ name: Build and Deploy app
 
 on:
   push:
-    branches: [ master ]
+    paths:
+      - ".github/workflows/deploy-app.yml"
+      - "app/**"
+      - "data/**/diff.geojson"
+      - "data/**/stats.json"
   pull_request:
     paths:
       - "app/**"
