--- a/.github/workflows/belgium-flanders.yml
+++ b/.github/workflows/belgium-flanders.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           persist-credentials: false
-          token: ${{ secrets.TOKEN }}
+          fetch-depth: 0
       - name: Install GDAL
         run: |
           sudo apt-add-repository ppa:ubuntugis/ubuntugis-unstable
@@ -95,7 +95,7 @@ jobs:
         with:
           name: Flanders-Statistics
           path: data/belgium/flanders/difference/Wegenregister_SHAPE_20200917/stats.json
-      - name: Push to repository
+      - name: Commit changes
         if: ${{ github.event != 'pull_request' }}
         run: |
           git config user.name github-actions
@@ -104,4 +104,9 @@ jobs:
           git add data/belgium/flanders/difference/Wegenregister_SHAPE_20200917/diff.geojson
           git add data/belgium/flanders/difference/Wegenregister_SHAPE_20200917/stats.json
           git commit -m "🗃 Update difference for Flanders, Belgium"
-          git push
+      - name: Push changes
+        if: ${{ github.event != 'pull_request' }}
+        uses: ad-m/github-push-action@v0.6.0
+        with:
+          github_token: ${{ secrets.TOKEN }}
+          branch: ${{ github.ref }}
