--- a/.github/workflows/belgium-brussels.yml
+++ b/.github/workflows/belgium-brussels.yml
@@ -46,7 +46,7 @@ jobs:
           country: europe/belgium
       - name: Download & Unzip UrbIS data
         run: |
-          wget "https://s.irisnet.be/v1/AUTH_ce3f7c74-fbd7-4b46-8d85-53d10d86904f/UrbAdm/UrbAdm_SHP.zip"
+          wget --no-check-certificate "https://s.irisnet.be/v1/AUTH_ce3f7c74-fbd7-4b46-8d85-53d10d86904f/UrbAdm/UrbAdm_SHP.zip"
           unzip "UrbAdm_SHP.zip" "shp/UrbAdm_STREET_AXIS.*"
       - name: Convert (and filter) UrbIS to GeoJSON
         run: |
