--- a/.github/workflows/belgium-flanders.yml
+++ b/.github/workflows/belgium-flanders.yml
@@ -98,8 +98,8 @@ jobs:
       - name: Commit changes
         if: ${{ github.event != 'pull_request' }}
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git pull
           git add data/belgium/flanders/difference/diff.geojson
           git add data/belgium/flanders/difference/stats.json
