--- a/app/package.json
+++ b/app/package.json
@@ -6,12 +6,9 @@
     "dev": "sapper dev",
     "build": "sapper build --legacy",
     "export": "sapper export --legacy",
-    "export:githubio": "GITHUBIO=true sapper export --legacy --basepath road-completion",
-    "start": "node __sapper__/build",
-    "validate": "svelte-check --ignore src/node_modules/@sapper"
+    "start": "node __sapper__/build"
   },
   "dependencies": {
-    "bulma": "^0.9.1",
     "chart.js": "^2.9.4",
     "compression": "^1.7.4",
     "moment": "^2.29.1",
@@ -19,6 +16,9 @@
     "sirv": "^1.0.10"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
+    "sapper": "^0.28.10",
+    "svelte": "^3.31.2",
     "@babel/core": "^7.12.10",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.12.10",
@@ -29,26 +29,9 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.1.0",
     "@rollup/plugin-replace": "^2.3.4",
-    "@rollup/plugin-typescript": "^8.1.0",
     "@rollup/plugin-url": "^6.0.0",
-    "@tsconfig/svelte": "^1.0.10",
-    "@types/chart.js": "^2.9.29",
-    "@types/compression": "^1.7.0",
-    "@types/node": "^14.14.21",
-    "@types/polka": "^0.5.2",
-    "autoprefixer": "^10.2.1",
-    "dotenv": "^8.2.0",
-    "node-sass": "^5.0.0",
-    "postcss": "^8.2.4",
     "rollup": "^2.36.2",
-    "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "sapper": "^0.28.10",
-    "svelte": "^3.31.2",
-    "svelte-check": "^1.1.28",
-    "svelte-preprocess": "^4.6.1",
-    "tslib": "^2.1.0",
-    "typescript": "^4.1.3"
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
