--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
     "dev": "sapper dev",
     "build": "sapper build --legacy",
     "export": "sapper export --legacy",
+    "export:githubio": "GITHUBIO=true sapper export --legacy --basepath road-completion",
     "start": "node __sapper__/build"
   },
   "dependencies": {
