--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "## Requirements",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --removeComments"
+    "build": "tsc --removeComments",
+    "lint": "eslint script/src/*.ts",
+    "lint:fix": "eslint --fix script/src/*.ts"
   },
   "repository": {
     "type": "git",
@@ -35,7 +36,14 @@
     "@types/event-stream": "^3.3.34",
     "@types/geojson": "^7946.0.7",
     "@types/minimist": "^1.2.1",
-    "@types/node": "^14.14.25",
-    "typescript": "^4.1.3"
+    "@types/node": "^14.14.27",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
+    "eslint": "^7.20.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "typescript": "^4.1.5"
   }
 }
