--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,9 @@
     "build": "sapper build --legacy",
     "export": "sapper export --legacy",
     "export:githubio": "GITHUBIO=true sapper export --legacy --basepath road-completion",
-    "start": "node __sapper__/build"
+    "start": "node __sapper__/build",
+    "lint": "eslint \"src/**/*.js\"",
+    "lint:fix": "eslint --fix \"src/**/*.js\""
   },
   "dependencies": {
     "chart.js": "^2.9.4",
@@ -17,9 +19,6 @@
     "sirv": "^1.0.11"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
-    "sapper": "^0.29.1",
-    "svelte": "^3.32.1",
     "@babel/core": "^7.12.13",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.12.15",
@@ -31,8 +30,16 @@
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@rollup/plugin-replace": "^2.3.4",
     "@rollup/plugin-url": "^6.0.0",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.20.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
     "rollup": "^2.38.5",
     "rollup-plugin-svelte": "^7.1.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "sapper": "^0.29.1",
+    "svelte": "^3.32.1"
   }
 }
