--- a/script/package.json
+++ b/script/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc --removeComments",
-    "lint": "eslint --ext .ts \"script/src/**\"",
-    "lint:fix": "eslint --fix --ext .ts \"script/src/**\""
+    "lint": "eslint --ext .ts \"src/**\"",
+    "lint:fix": "eslint --fix --ext .ts \"src/**\""
   },
   "repository": {
     "type": "git",
