--- a/.github/workflows/javascript-ci.yml
+++ b/.github/workflows/javascript-ci.yml
@@ -22,5 +22,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
+      working-directory: script
     - run: npm run lint
+      working-directory: script
     - run: npm run build
+      working-directory: script
