--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,9 @@ updates:
     interval: monthly
     time: "04:00"
   open-pull-requests-limit: 10
+- package-ecosystem: npm
+  directory: "/script"
+  schedule:
+    interval: monthly
+    time: "04:00"
+  open-pull-requests-limit: 10
