💚 Fix GitHub Actions for Belgium
Co-authored-by: Robin van der Linde <robin.vanderlinde@gmail.com>

--- a/.github/workflows/belgium-brussels.yml
+++ b/.github/workflows/belgium-brussels.yml
@@ -97,7 +97,7 @@ jobs:
           name: Brussels-Statistics
           path: data/belgium/brussels/difference/stats.json
       - name: Commit changes
-        if: ${{ github.event != 'pull_request' }}
+        if: ${{ github.event_name != 'pull_request' }}
         run: |
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
@@ -106,7 +106,7 @@ jobs:
           git add data/belgium/brussels/difference/stats.json
           git commit -m "🗃 Update difference for Brussels, Belgium"
       - name: Push changes
-        if: ${{ github.event != 'pull_request' }}
+        if: ${{ github.event_name != 'pull_request' }}
         uses: ad-m/github-push-action@v0.6.0
         with:
           github_token: ${{ secrets.TOKEN }}
