--- a/.github/workflows/belgium-flanders.yml
+++ b/.github/workflows/belgium-flanders.yml
@@ -98,7 +98,7 @@ jobs:
           name: Flanders-Statistics
           path: data/belgium/flanders/difference/stats.json
       - name: Commit changes
-        if: ${{ github.event != 'pull_request' }}
+        if: ${{ github.event_name != 'pull_request' }}
         run: |
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
@@ -107,7 +107,7 @@ jobs:
           git add data/belgium/flanders/difference/stats.json
           git commit -m "🗃 Update difference for Flanders, Belgium"
       - name: Push changes
-        if: ${{ github.event != 'pull_request' }}
+        if: ${{ github.event_name != 'pull_request' }}
         uses: ad-m/github-push-action@v0.6.0
         with:
           github_token: ${{ secrets.TOKEN }}
