--- a/stats/package.json
+++ b/stats/package.json
@@ -9,6 +9,7 @@
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@astrojs/renderer-svelte": "^0.1.2",
     "@snowpack/plugin-dotenv": "^2.2.0",
     "astro": "^0.20.9"
   },
