Fix environment variable for Astro
See https://docs.astro.build/guides/environment-variables/index.html

--- a/.github/workflows/deploy-stats-page.yml
+++ b/.github/workflows/deploy-stats-page.yml
@@ -43,7 +43,7 @@ jobs:
           npm run build
         working-directory: stats
         env:
-          SNOWPACK_PUBLIC_TOKEN: ${{ secrets.TOKEN }}
+          PUBLIC_GITHUB_TOKEN: ${{ secrets.TOKEN }}
 
       - name: Deploy
         if: ${{ github.event_name == 'push' }}
