--- a/report/package.json
+++ b/report/package.json
@@ -8,6 +8,7 @@
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@astrojs/svelte": "^0.1.1",
     "@octokit/rest": "^18.12.0",
     "astro": "^0.25.4"
   },
